force-app/main/default/objects/Event_Plan__c/fields/Event_Flag__c.field-meta.xml
<CustomField>
    <fullName>Event_Flag__c</fullName>
    <description>Internal indicator to monitor and manage the overall health status of the event.</description>
    <label>Event Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>