force-app/main/default/objects/Event_Plan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The physical location of the event.</description>
    <label>Location</label>
    <length>55</length>
    <type>Text</type>
</CustomField>