force-app/main/default/objects/Event_Plan__c/fields/Pending_Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Tasks_Count__c</fullName>
    <description>The Roll-Up Summary field automatically calculates and stores the total count of pending tasks associated with each event</description>
    <label>Pending Tasks Count</label>
    <summaryFilterItems>
        <field>Event_Task__c.Task_Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Event_Task__c.Task_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Task__c.Event_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>