force-app/main/default/objects/Event_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Budget__c</columns>
    <columns>Event_Flag__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>